[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python4yahdlc"
version = "1.3.5"
description = "Python binding of the yahdlc library allowing to encode and decode HDLC frames."
readme = "README.rst"
keywords = ["hdlc", "yahdlc", "binding", "network"]
authors = [
    {name = "Paul-Emmanuel Raoul"},
]
requires-python = ">=3.7, <4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
examples = [
    "fysom",
    "pyserial",
]
tests = [
    "black",
    "ruff >= 0.3",
    "tox",
]

[project.urls]
"Bug Tracker" = "https://github.com/SkypLabs/python4yahdlc/issues"
"Source Code" = "https://github.com/SkypLabs/python4yahdlc"
